# hashgoblin

./: Cargo.toml  Dockerfile
src/: cleanup.rs  cli.rs  commands.rs  db.rs  gui.rs  main.rs  scan.rs
