[package]
name = "hashgoblin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hashgoblin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
walkdir = "2"
rayon = "1"
tree_magic_mini = "3"
indicatif = "0.17"
anyhow = "1"
image = "0.23"  # must match pdqhash 0.1.1's dependency
pdqhash = "0.1.1"

[dev-dependencies]
tempfile = "3"
