[package]
name = "hashgoblin"
version = "0.1.0"
edition = "2021"
description = "Resumable, parallel file hashing and duplicate detection with SHA-256 and PDQ perceptual image hashing"
license = "LicenseRef-HashGoblin-PublicDomain"

[[bin]]
name = "hashgoblin"
path = "src/main.rs"

[features]
gui = ["dep:eframe", "dep:rfd", "dep:open"]
cleanup = []

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
walkdir = "2"
rayon = "1"
tree_magic_mini = "3"
indicatif = "0.17"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.23"  # must match pdqhash 0.1.1's dependency
pdqhash = "0.1.1"
eframe = { version = "0.29", optional = true }
rfd = { version = "0.15", optional = true }
open = { version = "5", optional = true }

[dev-dependencies]
tempfile = "3"
